# DiscordRAGBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_VPS.md  DOCKER.md  Dockerfile  MIGRATION.md  MIGRATION_GUIDE.md  Makefile  README.md  SCHEMA_SUMMARY.md  api_server.py  batch_ingest.py  bot.py  docker-compose.prod.yml  docker-compose.yml  ingest_pdf.py  load.py  mkdocs.yml  pyproject.toml  pytest.ini  replit.md  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--Bot-Discord-RAG-PT-BR-com-OpenRouter-Estrutura-atualizada-rag-ptbr-data--1761815015277_1761815015277.txt
data/: .gitkeep  test_sample.txt
docker/: entrypoint.sh  healthcheck.sh
docs/: api.md  architecture.md  formatos_suportados.md  index.md  installation.md  logs.md  supabase_setup.md  troubleshooting.md  usage.md
k8s/: deployment.yaml  hpa.yaml
migrations/: 001_enhanced_schema.sql  002_row_level_security.sql  003_document_control_system.sql  004_kb_vector_search.sql  README.md  rollback.sql  types.ts  validate.sql
scripts/: build.sh  deploy-k8s.sh
src/: __init__.py  api.py  cache.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py  models.py  py.typed
src/bot/: __init__.py  admin_commands.py  client.py  commands.py  handlers.py
src/services/: __init__.py  config_service.py  document_control_service.py  llm_service.py  supabase_service.py  vectorstore_service.py
src/utils/: __init__.py  document_loaders.py  file_utils.py  string_utils.py  time_utils.py
tests/: __init__.py  conftest.py  test_cache.py  test_models.py
tests/test_services/: test_config_service.py
web/: README.md  index.html
web/css/: terminal.css
web/js/: terminal.js
